Contrast issues fixed.

--- a/styles/base.css
+++ b/styles/base.css
@@ -49,7 +49,7 @@ header span {
 
 nav a {
   background-color:#468189;
-  color: black;
+  color: #ffffff;
   text-align: center;
   padding: 15px;
   font-size: 22px;
@@ -70,6 +70,7 @@ nav a {
 nav a:hover{
   
   background-color: #f4e9cd;
+  color: #000000;
   text-decoration: 2px solid black underline;
   transition: 2s;
 }
